# Selene

./: .gitignore  CMakeLists.txt
Assets/Shaders/: Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.vert.glsl
Engine/: CMakeLists.txt
Engine/src/: defines.h  entry.h  game_types.h  test.h
Engine/src/containers/: darray.c  darray.h
Engine/src/core/: application.c  application.h  asserts.h  clock.h  event.c  event.h  input.c  input.h  logger.c  logger.h  sln_memory.c  sln_memory.h  sln_string.c  sln_string.h
Engine/src/math/: math_types.h  sln_math.c  sln_math.h
Engine/src/memory/: linear_allocator.c  linear_allocator.h
Engine/src/platform/: filesystem.c  filesystem.h  plaform_linux.c  platform.h  platform_ios.m  platform_linux.c  platform_macos.m  platform_windows.c
Engine/src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.inl
Engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_framebuffer.c  vulkan_image.c  vulkan_image.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_renderpass.c  vulkan_shader_utils.c  vulkan_shader_utils.h  vulkan_swapchain.c  vulkan_types.inl  vulkan_utils.h
Engine/src/renderer/vulkan/shaders/: vulkan_object_shader.c  vulkan_object_shader.h
Engine/src/resources/: resource_types.h
Testbed/: CMakeLists.txt
Testbed/src/: entry.c  game.c  game.h  main.c
Tests/: CMakeLists.txt
Tests/src/: expect.h  main.c  test_manager.c
Tests/src/memory/: linear_allocator_tests.c
